Fix: Ajustando responsividade do modal e alinhando o título (CriarConsulta) ao modal, fazendo o mesmo ficar com o tamanho adequado na tela, pois anteriormente estava com um (overflow).

--- a/src/Styles/Inicio.scss
+++ b/src/Styles/Inicio.scss
@@ -88,8 +88,12 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    input{
+    
+    input {
         text-align: center;
+        margin-top: 10px;
+        padding: 4px;
+        background-color: #d4d0c8;
     }
 
     input {
