--- a/src/Styles/Modal.scss
+++ b/src/Styles/Modal.scss
@@ -13,12 +13,12 @@
 
 .modal-content {
   background: white;
-  padding: 20px;
+  //padding: 20px;
   border-radius: 8px;
   position: relative;
   max-width: 800px;
   width: 100%;
-  height: 90%;
+  height: 80%;
   background: linear-gradient(135deg, #3a3434, #3a3939, #454343, #515050);
   /* Degradê mais suave */
 }
